cabal-version:   3.0
name:            eventlog-live
version:         0.2.0.0
synopsis:        Live processing of eventlog data.
description:
  This package supports live processing of eventlog data.
  It consists of three libraries:

  *   The @eventlog-live@ library defines
      [machines](https://hackage.haskell.org/package/machines)
      for processing eventlog data.
  *   The @eventlog-live:options@ sub-library defines
      [optparse-applicative](https://hackage.haskell.org/package/optparse-applicative)
      parsers for common command-line arguments.
  *   The @eventlog-live:socket@ sub-library defines functions to read the
      eventlog from a Unix socket, which depend on the
      [network](https://hackage.haskell.org/package/network) package.

  This package is primarily intended for use via the
  [eventlog-live-influxdb](https://hackage.haskell.org/package/eventlog-live-influxdb)
  and
  [eventlog-live-otelcol](https://hackage.haskell.org/package/eventlog-live-otelcol)
  packages.

  [⚠️ Warning]:
      This package is experimental.
      It is versioned according to the [PVP](https://pvp.haskell.org).
      However, breaking changes should be expected and no effort will be
      made to avoid major version bumps until at least version @1.0.0.0@.

  For more information, see [the README](https://github.com/well-typed/eventlog-live#readme).

license:         BSD-3-Clause
license-file:    LICENSE
author:          Wen Kokke
maintainer:      wen@well-typed.com
copyright:       (c) 2021-2025 Well-Typed
build-type:      Simple
category:        Debug, Monitoring, System
extra-doc-files: CHANGELOG.md
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-live.git
  subdir:   eventlog-live

common language
  ghc-options:
    -Wall -Wcompat -Widentities -Wprepositive-qualified-module
    -Wredundant-constraints -Wunticked-promoted-constructors
    -Wunused-packages

  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoFieldSelectors
    NumericUnderscores
    OverloadedRecordDot
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies

library
  import:             language
  hs-source-dirs:     src-machines
  exposed-modules:    GHC.Eventlog.Live.Machines
  reexported-modules: GHC.Eventlog.Live.Verbosity
  build-depends:
    , base                  >=4.16   && <4.22
    , bytestring            >=0.11   && <0.13
    , dlist                 >=1.0    && <1.1
    , eventlog-live:logger
    , ghc-events            >=0.20   && <0.21
    , hashable              >=1.4    && <1.6
    , machines              >=0.7.4  && <0.8
    , text                  >=1.2    && <2.2
    , unordered-containers  >=0.2.20 && <0.3

library logger
  import:          language
  visibility:      private
  hs-source-dirs:  src-logger
  exposed-modules:
    GHC.Eventlog.Live.Internal.Logger
    GHC.Eventlog.Live.Verbosity

  build-depends:
    , base  >=4.16 && <4.22
    , text  >=1.2  && <2.2

library options
  import:          language
  visibility:      public
  hs-source-dirs:  src-options
  exposed-modules: GHC.Eventlog.Live.Options
  build-depends:
    , base                  >=4.16 && <4.22
    , eventlog-live
    , ghc-events            >=0.20 && <0.21
    , optparse-applicative  >=0.17 && <0.20

library socket
  import:          language
  visibility:      public
  hs-source-dirs:  src-socket
  exposed-modules: GHC.Eventlog.Live.Socket
  build-depends:
    , base                   >=4.16  && <4.22
    , eventlog-live
    , eventlog-live:logger
    , eventlog-live:options
    , ghc-events             >=0.20  && <0.21
    , machines               >=0.7.4 && <0.8
    , network                >=3.2.7 && <3.3
    , text                   >=1.2   && <2.2
    , unliftio-core          >=0.2.1 && <0.3
