cabal-version: 2.4
name:          eventlog-machines
version:       0.1.0.0
synopsis:      Machines for the eventlog.
description:   Machines for processing the GHC eventlog.
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Matthew Pickering <matthew@well-typed.com>
copyright:     (c) 2021 Well-Typed
license:       BSD-3-Clause
license-file:  LICENSE
category:      Debug, Monitoring, System, Machines
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-live.git
  subdir:   eventlog-machines

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src/
  exposed-modules:  GHC.Eventlog.Machines
  build-depends:
    , base          >=4.13   && <5
    , bytestring
    , clock
    , containers
    , ghc-events    >=0.17.0
    , machines
    , stm
    , text
    , transformers
