cabal-version: 2.4
name:          eventlog-recv
version:       0.1
synopsis:      Receive eventlog over a socket
category:      Debug, Monitoring, System, Network
description:
  This a demo application which shows how to receive and process
  eventlog over a UNIX socket, from an application using @eventlog-socket@.

author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Not me.
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     (c) 2021 someone

source-repository head
  type:     git
  location: https://github.com/mpickering/eventlog-live.git
  subdir:   eventlog-recv

executable eventlog-recv
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded
  main-is:          Main.hs
  build-depends:
    , base                   ^>=4.14.0.0
    , bytestring
    , concurrent-output
    , containers
    , ekg
    , ekg-core
    , eventlog-counters
    , eventlog-counters-ekg
    , eventlog-machines
    , ghc-events             >=0.17.0
    , ghc-events2prof
    , ghc-prof
    , machines
    , network
    , optparse-applicative   ^>=0.16.1.0
    , scientific
    , stm
    , text
