cabal-version: 2.4
name:          eventlog-recv
version:       0.1
synopsis:      Receive eventlog over a socket
category:      Debug, Monitoring, System, Network
description:
  This a demo application which shows how to receive and process
  eventlog over a UNIX socket, from an application using @eventlog-socket@.
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Matthew Pickering <matthew@well-typed.com>
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     (c) 2021 someone
tested-with:
    GHC==9.2.8
     ||==9.4.8
     ||==9.6.7
     ||==9.8.4
     ||==9.10.2
     ||==9.12.2

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-live.git
  subdir:   eventlog-recv

executable eventlog-recv
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded
  main-is:          Main.hs
  build-depends:
    , base                  >=4.16.0.0 && < 5
    , ghc-events            >=0.17.0
    , containers
    , optparse-applicative  ^>=0.16.1.0
    , concurrent-output
    , text
    , stm
    , ekg
    , ekg-core
    , eventlog-machines
    , bytestring
    , eventlog-counters
    , eventlog-counters-ekg
    , network
    , machines
