cabal-version:       >=1.10
name:                test
version:             0.1.0.0
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable test
  GHC-options:
      -Wall -threaded -debug -rtsopts
  default-language:
      Haskell2010
  build-depends:
      ekg-eventlog-core
    , base >= 4 && < 5
    , ekg-influxdb
    , ekg-eventlog-influxdb
    , ekg-core
    , influxdb
    , async
    , lens
  Main-is:
      Main.hs
