cabal-version: 2.4
name:          collatzer
version:       0.1
synopsis:      Collate eventlog data.
description:   Collate eventlog data received over a socket.
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Matthew Pickering <matthew@well-typed.com>
copyright:     (c) 2021 Well-Typed
license:       BSD-3-Clause
license-file:  LICENSE
category:      Debug, Monitoring, System, Network
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-live.git
  subdir:   collatzer

executable collatzer
  default-language: Haskell2010
  hs-source-dirs:   app
  ghc-options:      -Wall -threaded
  main-is:          Main.hs
  build-depends:
    , base                   >=4.16.0.0  && <5
    , bytestring
    , concurrent-output
    , containers
    , ekg
    , ekg-core
    , eventlog-counters
    , eventlog-counters-ekg
    , eventlog-machines
    , ghc-events             >=0.17.0
    , machines
    , network
    , optparse-applicative   ^>=0.16.1.0
    , stm
    , text
