cabal-version: 3.0
name:          collatzer
version:       0.1
synopsis:      Collate eventlog data.
description:   Collate eventlog data received over a socket.
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Matthew Pickering <matthew@well-typed.com>
copyright:     (c) 2021 Well-Typed
license:       BSD-3-Clause
license-file:  LICENSE
category:      Debug, Monitoring, System, Network
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/well-typed/eventlog-live.git
  subdir:   examples/collatzer

library counters
  ghc-options:        -Wall
  hs-source-dirs:     src-counters/
  default-language:   Haskell2010
  default-extensions:
    NamedFieldPuns
    RecordWildCards

  exposed-modules:    GHC.Eventlog.Counters
  build-depends:
    , base        >=4.13   && <5
    , containers  >=0.6    && <0.8
    , ghc-events  >=0.20.0 && <0.21
    , stm         >=2.5    && <2.6

library counters-ekg
  ghc-options:        -Wall
  hs-source-dirs:     src-counters-ekg/
  default-language:   Haskell2010
  default-extensions: RecordWildCards
  exposed-modules:    GHC.Eventlog.Counters.EKG
  build-depends:
    , base                >=4.13  && <5
    , collatzer:counters
    , ekg-core            >=0.1.2 && <0.2
    , stm                 >=2.5   && <2.6
    , text                >=1.2   && <2.2

executable collatzer
  default-language:   Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    GADTs
    NumericUnderscores
    RankNTypes
    RecordWildCards
    TypeOperators

  hs-source-dirs:     app
  ghc-options:        -Wall -threaded
  main-is:            Main.hs
  build-depends:
    , base                    >=4.16    && <5
    , bytestring              >=0.11    && <0.13
    , collatzer:counters
    , collatzer:counters-ekg
    , concurrent-output       >=1.10.21 && <1.11
    , containers              >=0.6     && <0.8
    , ekg                     >=0.4.1   && <0.5
    , ekg-core                >=0.1.2   && <0.2
    , eventlog-live           >=0.1     && <0.4
    , ghc-events              >=0.20.0  && <0.21
    , machines                >=0.7.4   && <0.8
    , network                 >=3.2.7   && <3.3
    , optparse-applicative    >=0.17    && <0.20
    , stm                     >=2.5     && <2.6
    , text                    >=1.2     && <2.2
