cabal-version: 3.0
name:          dumper
version:       0.1.0.0
synopsis:      Dump eventlog data.
description:   Transfer events from an eventlog socket to stdout.
author:        Wen Kokke
maintainer:    wen@well-typed.com
copyright:     (c) 2025 Well-Typed
license:       AGPL-3.0-only
license-file:  LICENSE
category:      Debug, Monitoring, System, Network
tested-with:   GHC ==9.2.8 || ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.2

executable dumper
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    RecordWildCards

  main-is:            Main.hs
  build-depends:
    , base                    >=4.16    && <4.21
    , bytestring              >=0.11    && <0.13
    , eventlog-live           >=0.1.0.0 && <0.2
    , eventlog-live:machines
    , eventlog-live:options
    , ghc-events              >=0.20.0  && <0.21
    , machines                >=0.7.4   && <0.8
    , network                 >=3.2.7   && <3.3
    , optparse-applicative    >=0.19.0  && <0.20
    , regex-tdfa              >=1.3.2   && <1.4
