cabal-version: 2.2
name:          fibber
version:       0.1.0.0
synopsis:      Example with an interesting call profile.
description:
  An implementation of the Fibonacci function that is quite naive.
  Taken from the Haskell Wiki.

maintainer:    wen@well-typed.com
copyright:     (c) 2025 Well-Typed
license:       BSD-3-Clause
license-file:  LICENSE
category:      Debug, Monitoring, System, Network
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

executable fibber
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base             >=4.14  && <5
    , eventlog-socket  >=0.1.0 && <0.2

  ghc-options:      -threaded -rtsopts

  if impl(ghc <9.4)
    ghc-options: -eventlog
