cabal-version: 2.4
name:          oddball
version:       0.1.0.0
synopsis:      Example with an interesting heap profile.
description:   Repeatedly sum long sequences of random numbers.
author:        Finley McIlwaine
maintainer:    wen@well-typed.com
copyright:     (c) 2023 Well-Typed
license:       BSD-3-Clause
license-file:  LICENSE
category:      Debug, Monitoring, System, Network

executable oddball
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base             >=4.14 && <5
    , eventlog-socket
    , random

  ghc-options:
    -threaded -rtsopts
    "-with-rtsopts=-l -hT --eventlog-flush-interval=1 --no-automatic-heap-samples"

  if impl(ghc <9.4)
    ghc-options: -eventlog
