cabal-version: 2.4
name:          oddball
version:       0.1.0.0
synopsis:      Example with an interesting heap profile.
description:   Repeatedly sum long sequences of random numbers.
author:        Finley McIlwaine
maintainer:    wen@well-typed.com
copyright:     (c) 2023 Well-Typed
license:       BSD-3-Clause
license-file:  LICENSE
category:      Debug, Monitoring, System, Network
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

executable oddball
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: TypeApplications
  ghc-options:        -threaded -rtsopts -finfo-table-map
  build-depends:
    , base             >=4.14  && <5
    , eventlog-socket  >=0.1.0 && <0.2
    , random           >=1.2   && <1.4

  if impl(ghc <9.4)
    ghc-options: -eventlog
