cabal-version: 2.4
name:          parfib
version:       0.1.0.0
synopsis:      Example with an interesting thread profile.
description:   Ever popular nfib, now in parallel.
license-file:  LICENSE
category:      Debug, Monitoring, System, Network

executable parfib
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -finfo-table-map
  build-depends:
    , base             >=4.14 && <5
    , eventlog-socket
    , parallel         >=3.2  && <3.3

  if impl(ghc <9.4)
    ghc-options: -eventlog
